Fixed overflowing hidden menu navigation

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -49,12 +49,13 @@
 	background-color: black;
 	width: 100%;
 	margin: 0;
-	padding: 5px 0px;
-	transition: height 0.3s ease-in-out;
+	padding: 0;
+	transition: all 0.3s ease-in-out;
 }
 
 .down .menuNav {
 	height: 80px;
+	padding: 5px 0px;
 }
 
 button {
